cgo/include/urnetwork_sdk.h

/* GetNetworkRedeemedBalanceCodesCallback */
typedef void (*urnet_get_network_redeemed_balance_codes_cb)(void* user_data, const char* result_json, const char* err_param);
/* GetNetworkReferralCodeCallback */
typedef void (*urnet_get_network_referral_code_cb)(void* user_data, const char* result_json, const char* err_param);
/* GetNetworkReliabilityCallback */
typedef void (*urnet_get_network_reliability_cb)(void* user_data, const char* result_json, const char* err_param);
/* GetNetworkUserCallback */
typedef void (*urnet_get_network_user_cb)(void* user_data, const char* result_json, const char* err_param);
/* GetPayoutWalletCallback */
typedef void (*urnet_get_payout_wallet_cb)(void* user_data, const char* result_json, const char* err_param);
/* GetPointsLeaderboardCallback */
typedef void (*urnet_get_points_leaderboard_cb)(void* user_data, const char* result_json, const char* err_param);
/* GetReferralNetworkCallback */
typedef void (*urnet_get_referral_network_cb)(void* user_data, const char* result_json, const char* err_param);
/* GetTransferStatsCallback */
typedef void (*urnet_get_transfer_stats_cb)(void* user_data, const char* result_json, const char* err_param);
/* GridListener */
typedef void (*urnet_grid_cb)(void* user_data);
/* IsCreatingExternalWalletListener */
typedef void (*urnet_is_creating_external_wallet_cb)(void* user_data, bool p0);
/* IsNetworkUserLoadingListener */
typedef void (*urnet_is_network_user_loading_cb)(void* user_data, bool p0);
/* IsNetworkUserUpdatingListener */
typedef void (*urnet_is_network_user_updating_cb)(void* user_data, bool p0);
/* IsRemovingWalletListener */
typedef void (*urnet_is_removing_wallet_cb)(void* user_data, bool p0);
/* IsSendingFeedbackListener */
typedef void (*urnet_is_sending_feedback_cb)(void* user_data, bool p0);
/* JwtRefreshListener */
typedef void (*urnet_jwt_refresh_cb)(void* user_data, const char* jwt);
/* ListApiKeysCallback */
typedef void (*urnet_list_api_keys_cb)(void* user_data, const char* result_json, const char* err_param);
/* LocalOverrideAppIdsListener */
typedef void (*urnet_local_override_app_ids_cb)(void* user_data);
/* LocalStateSaveListener */
typedef void (*urnet_local_state_save_cb)(void* user_data, uint64_t result);
/* NetworkBlockLocationCallback */
typedef void (*urnet_network_block_location_cb)(void* user_data, const char* result_json, const char* err_param);
/* NetworkCheckCallback */
typedef void (*urnet_network_check_cb)(void* user_data, const char* result_json, const char* err_param);
/* NetworkClientsListener */
typedef void (*urnet_network_clients_cb)(void* user_data, const char* network_clients_json);
/* NetworkCreateCallback */
typedef void (*urnet_network_create_cb)(void* user_data, const char* result_json, const char* err_param);
/* NetworkDeleteCallback */
typedef void (*urnet_network_delete_cb)(void* user_data, const char* result_json, const char* err_param);
/* NetworkPeersChangeListener */
typedef void (*urnet_network_peers_change_cb)(void* user_data, const char* network_peers_json);
/* NetworkSpaceUpdate */
typedef void (*urnet_network_space_update_cb)(void* user_data, const char* values_json);
/* NetworkSpacesChangeListener */
typedef void (*urnet_network_spaces_change_cb)(void* user_data);
/* NetworkUnblockLocationCallback */
typedef void (*urnet_network_unblock_location_cb)(void* user_data, const char* result_json, const char* err_param);
/* NetworkUserListener */
typedef void (*urnet_network_user_cb)(void* user_data);
/* NetworkUserUpdateCallback */
typedef void (*urnet_network_user_update_cb)(void* user_data, const char* result_json, const char* err_param);
/* NetworkUserUpdateErrorListener */
typedef void (*urnet_network_user_update_error_cb)(void* user_data, const char* p0);
/* NetworkUserUpdateSuccessListener */
typedef void (*urnet_network_user_update_success_cb)(void* user_data);
/* OfflineChangeListener */
typedef void (*urnet_offline_change_cb)(void* user_data, bool offline, bool vpn_interface_while_offline);
/* OnboardingClickCallback */
typedef void (*urnet_onboarding_click_cb)(void* user_data, const char* result_json, const char* err_param);
/* OnboardingFeedbackTokenCallback */
typedef void (*urnet_onboarding_feedback_token_cb)(void* user_data, const char* result_json, const char* err_param);
/* OnboardingOfferIssueCallback */
typedef void (*urnet_onboarding_offer_issue_cb)(void* user_data, const char* result_json, const char* err_param);
/* PacketStatsChangeListener */
typedef void (*urnet_packet_stats_change_cb)(void* user_data, const char* packet_stats_json);
/* ParseByJwtCallback */
typedef void (*urnet_parse_by_jwt_cb)(void* user_data, const char* result_json, bool ok_param);
/* PaymentsListener */
typedef void (*urnet_payments_cb)(void* user_data);
/* PayoutWalletListener */
typedef void (*urnet_payout_wallet_cb)(void* user_data, const char* p0);
/* PeersListener */
typedef void (*urnet_peers_cb)(void* user_data, const char* peers_json);
/* PerformanceProfileChangeListener */
typedef void (*urnet_performance_profile_change_cb)(void* user_data, const char* performance_profile_json);
/* PointsLeaderboardListener */
typedef void (*urnet_points_leaderboard_cb)(void* user_data);
/* PostQuantumIdentityListener */
typedef void (*urnet_post_quantum_identity_cb)(void* user_data);
/* ProvideChangeListener */
typedef void (*urnet_provide_change_cb)(void* user_data, bool provide_enabled);
/* ProvideControlModeChangeListener */
typedef void (*urnet_provide_control_mode_change_cb)(void* user_data, const char* provide_control_mode);
/* ProvideModeChangeListener */
typedef void (*urnet_provide_mode_change_cb)(void* user_data, int64_t provide_mode);
/* ProvideNetworkModeChangeListener */
typedef void (*urnet_provide_network_mode_change_cb)(void* user_data, const char* provide_network_mode);
/* ProvidePausedChangeListener */
typedef void (*urnet_provide_paused_change_cb)(void* user_data, bool provide_paused);
/* ProvideSecretKeysListener */
typedef void (*urnet_provide_secret_keys_cb)(void* user_data, const char* provide_secret_key_list_json);
/* ProviderIdentityChangeListener */
typedef void (*urnet_provider_identity_change_cb)(void* user_data);
/* ProviderTransportSettingsChangeListener */
typedef void (*urnet_provider_transport_settings_change_cb)(void* user_data, const char* transport_settings_json);
/* ProviderTransportStatusChangeListener */
typedef void (*urnet_provider_transport_status_change_cb)(void* user_data, const char* transport_status_json);
/* PurchaseConfirmationListener */
typedef void (*urnet_purchase_confirmation_cb)(void* user_data, const char* state);
/* ReceivePacket */
typedef void (*urnet_receive_packet_cb)(void* user_data, int64_t ip_version, int64_t ip_protocol, const uint8_t* packet, int32_t packet_len);
/* ReceivePacketBatch */
typedef void (*urnet_receive_packet_batch_cb)(void* user_data, const uint8_t* packet_batch_bytes, int32_t packet_batch_bytes_len);
/* ReceivePackets */
typedef void (*urnet_receive_packets_cb)(void* user_data, uint64_t packet_batch);
/* RedeemBalanceCodeCallback */
typedef void (*urnet_redeem_balance_code_cb)(void* user_data, const char* result_json, const char* err_param);
/* ReferralCodeListener */
typedef void (*urnet_referral_code_cb)(void* user_data, const char* p0);
/* RefreshJwtCallback */
typedef void (*urnet_refresh_jwt_cb)(void* user_data, const char* result_json, const char* err_param);
/* RegenerateSeedphraseCallback */
typedef void (*urnet_regenerate_seedphrase_cb)(void* user_data, const char* result_json, const char* err_param);
/* RemoteChangeListener */
typedef void (*urnet_remote_change_cb)(void* user_data, bool remote_connected);
/* RemoveAuthCallback */
typedef void (*urnet_remove_auth_cb)(void* user_data, const char* result_json, const char* err_param);
/* RemoveNetworkClientCallback */
typedef void (*urnet_remove_network_client_cb)(void* user_data, const char* result_json, const char* err_param);
/* RemoveWalletCallback */
typedef void (*urnet_remove_wallet_cb)(void* user_data, const char* result_json, const char* err_param);
/* RouteLocalChangeListener */
typedef void (*urnet_route_local_change_cb)(void* user_data, bool route_local);
/* SelectedLocationListener */
typedef void (*urnet_selected_location_cb)(void* user_data, const char* location_json);
/* SelectedProviderLocationChangeListener */
typedef void (*urnet_selected_provider_location_change_cb)(void* user_data);
/* SendFeedbackCallback */
typedef void (*urnet_send_feedback_cb)(void* user_data, const char* result_json, const char* err_param);
/* SetEmojiTagCallback */
typedef void (*urnet_set_emoji_tag_cb)(void* user_data, const char* result_json, const char* err_param);
/* SetNetworkLeaderboardPublicCallback */
typedef void (*urnet_set_network_leaderboard_public_cb)(void* user_data, const char* result_json, const char* err_param);
/* SetNetworkReferralCallback */
typedef void (*urnet_set_network_referral_cb)(void* user_data, const char* result_json, const char* err_param);