csharp/Raw.g.cs

  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_get_network_redeemed_balance_codes_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_get_network_referral_code_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_get_network_reliability_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_get_network_user_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_get_payout_wallet_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_get_points_leaderboard_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_get_referral_network_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_get_transfer_stats_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_grid_cb(IntPtr a0);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_is_creating_external_wallet_cb(IntPtr a0, byte a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_is_network_user_loading_cb(IntPtr a0, byte a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_is_network_user_updating_cb(IntPtr a0, byte a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_is_removing_wallet_cb(IntPtr a0, byte a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_is_sending_feedback_cb(IntPtr a0, byte a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_jwt_refresh_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_list_api_keys_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_local_override_app_ids_cb(IntPtr a0);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_local_state_save_cb(IntPtr a0, ulong a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_network_block_location_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_network_check_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_network_clients_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_network_create_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_network_delete_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_network_peers_change_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_network_space_update_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_network_spaces_change_cb(IntPtr a0);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_network_unblock_location_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_network_user_cb(IntPtr a0);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_network_user_update_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_network_user_update_error_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_network_user_update_success_cb(IntPtr a0);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_offline_change_cb(IntPtr a0, byte a1, byte a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_onboarding_click_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_onboarding_feedback_token_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_onboarding_offer_issue_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_packet_stats_change_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_parse_by_jwt_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, byte a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_payments_cb(IntPtr a0);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_payout_wallet_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_peers_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_performance_profile_change_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_points_leaderboard_cb(IntPtr a0);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_post_quantum_identity_cb(IntPtr a0);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_provide_change_cb(IntPtr a0, byte a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_provide_control_mode_change_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_provide_mode_change_cb(IntPtr a0, long a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_provide_network_mode_change_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_provide_paused_change_cb(IntPtr a0, byte a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_provide_secret_keys_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_provider_identity_change_cb(IntPtr a0);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_provider_transport_settings_change_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_provider_transport_status_change_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_purchase_confirmation_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_receive_packet_cb(IntPtr a0, long a1, long a2, IntPtr a3, int a4);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_receive_packet_batch_cb(IntPtr a0, IntPtr a1, int a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_receive_packets_cb(IntPtr a0, ulong a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_redeem_balance_code_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_referral_code_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_refresh_jwt_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_regenerate_seedphrase_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_remote_change_cb(IntPtr a0, byte a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_remove_auth_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_remove_network_client_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_remove_wallet_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_route_local_change_cb(IntPtr a0, byte a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_selected_location_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_selected_provider_location_change_cb(IntPtr a0);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_send_feedback_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_set_emoji_tag_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_set_network_leaderboard_public_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)] public delegate void urnet_set_network_referral_cb(IntPtr a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2);
